// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ColumnHeader snapshots should render ColumnHeader 1`] = `
<DocumentFragment>
  <div
    class="SectionColumn"
    data-test-section=""
  >
    <div
      class="SectionColumnLabels"
      style="width: calc(100% - 48px - 2.5px - 8px);"
    />
    <div
      class="SectionColumn__row"
    >
      <div
        class="SectionColumnContent SectionColumnContent--single"
        style="width: calc(100% - 48px - 2.5px - 8px);"
      >
        <small
          class="css-1jnxvbp Typography Typography--neutral-1 Typography--regular Typography--normal Typography--small"
          data-test-text=""
          style="align-items: center; display: flex; user-select: none; text-align: inherit;"
        >
          Frame
        </small>
      </div>
      <div>
        <div
          class="SectionColumnButtonIcons"
        >
          <div
            class="ButtonIcon"
            data-test-button-icon=""
            data-test-tooltip=""
          >
            <div
              class="css-1jnxvbp Icon Icon--neutral-1"
              data-test-icon="html-tag"
              height="14"
              name="HtmlTag"
              width="14"
            />
          </div>
          <div
            class="Tooltip"
          >
            <div
              class="Tooltip__content"
            >
              Toggle ready for dev status
              <div
                class="css-1jnxvbp Tooltip__carrot Tooltip__carrot--top-center Icon Icon--neutral-1"
                data-test-icon="carrot-down"
                height="14"
                name="CarrotDown"
                width="10"
              />
            </div>
          </div>
          <div
            class="ButtonIcon"
            data-test-button-icon=""
            data-test-tooltip=""
          >
            <div
              class="css-1jnxvbp Icon Icon--neutral-1"
              data-test-icon="component"
              height="14"
              name="Component"
              width="14"
            />
          </div>
          <div
            class="Tooltip"
          >
            <div
              class="Tooltip__content"
            >
              Create component
              <div
                class="css-1jnxvbp Tooltip__carrot Tooltip__carrot--top-center Icon Icon--neutral-1"
                data-test-icon="carrot-down"
                height="14"
                name="CarrotDown"
                width="10"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ColumnHeader snapshots should render with multiple selects 1`] = `
<DocumentFragment>
  <div
    class="SectionColumn"
    data-test-section=""
  >
    <div
      class="SectionColumnLabels"
      style="width: calc(100% - 48px - 2.5px - 8px);"
    />
    <div
      class="SectionColumn__row"
    >
      <div
        class="SectionColumnContent SectionColumnContent--single"
        style="width: calc(100% - 48px - 2.5px - 8px);"
      >
        <small
          class="css-1jnxvbp Typography Typography--neutral-1 Typography--regular Typography--normal Typography--small"
          data-test-text=""
          style="align-items: center; display: flex; user-select: none; text-align: inherit;"
        >
          2 selected
        </small>
      </div>
      <div>
        <div
          class="SectionColumnButtonIcons"
        >
          <div
            class="ButtonIcon"
            data-test-button-icon=""
            data-test-tooltip=""
          >
            <div
              class="css-1jnxvbp Icon Icon--neutral-1"
              data-test-icon="html-tag"
              height="14"
              name="HtmlTag"
              width="14"
            />
          </div>
          <div
            class="Tooltip"
          >
            <div
              class="Tooltip__content"
            >
              Toggle ready for dev status
              <div
                class="css-1jnxvbp Tooltip__carrot Tooltip__carrot--top-center Icon Icon--neutral-1"
                data-test-icon="carrot-down"
                height="14"
                name="CarrotDown"
                width="10"
              />
            </div>
          </div>
          <div
            class="ButtonIcon"
            data-test-button-icon=""
            data-test-tooltip=""
          >
            <div
              class="css-1jnxvbp Icon Icon--neutral-1"
              data-test-icon="component"
              height="14"
              name="Component"
              width="14"
            />
          </div>
          <div
            class="Tooltip"
          >
            <div
              class="Tooltip__content"
            >
              Create component
              <div
                class="css-1jnxvbp Tooltip__carrot Tooltip__carrot--top-center Icon Icon--neutral-1"
                data-test-icon="carrot-down"
                height="14"
                name="CarrotDown"
                width="10"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
